# databet

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  pyproject.toml  railway.toml  requirements.txt
admin/ui/: streamlit_app.py
agents/: base_agent.py
agents/sources/: apostala.py  the_odds_api.py
alembic/: env.py
alembic/versions/: 0001_initial.py
api/: auth.py  main.py
config/: crypto.py  database.py  settings.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx  Login.css  Login.jsx  api.js  index.css
models/: __init__.py  base.py  match.py  odds.py  scrape_session.py  source.py
normalizer/: __init__.py  normalizer.py
php-api/: .htaccess  _auth.php  _config.php  _jwt.php  health.php  login.php  matches.php  odds.php
scripts/: run_apostala.py  run_pilot.py
tests/: conftest.py  test_models.py  test_normalizer.py
